Fix Bugzilla Bug 186298 186299 182081

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -24,10 +24,10 @@ webServiceSelectionPage.group.wsdl=WSDL Descriptor
 webServiceSelectionPage.group.endPoint=SOAP End Point
 webServiceSelectionPage.group.customClass=Custom Connection Class
 webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system
-webServiceSelectionPage.label.wsdlURI=WSDL URL or Location:
-webServiceSelectionPage.label.endPoint=Specify the SOAP End Point URL. This value is optional if a custom connection class is used
-webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom Java class, enter the fully qualified class name here
-webServiceSelectionPage.button.browse=Browse...
+webServiceSelectionPage.label.wsdlURI=&WSDL URL or Location:
+webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. This value is optional if a custom connection class is used
+webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here
+webServiceSelectionPage.button.browse=&Browse...
 
 # OperationPage
 operationPage.message.default=Select an operation defined in the data source's WSDL descriptor
@@ -36,9 +36,9 @@ operationPage.label.document=Documentation
 
 # SoapRequestPage
 soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text
-soapRequestPage.button.generateTemplate=Generate Template
-soapRequestPage.button.insertParameter=Insert Parameter...
-soapRequestPage.button.clear=Clear
+soapRequestPage.button.generateTemplate=&Generate Template
+soapRequestPage.button.insertParameter=&Insert Parameter...
+soapRequestPage.button.clear=&Clear
 
 # ParameterInputDialog
 parameterInputDialog.column.name=Name
@@ -49,13 +49,16 @@ parameterInputDialog.column.defaultValue=Default Value
 soapResponsePage.message.default=Edit the SOAP response
 soapResponsePage.group.schema=Select SOAP Response Schema
 soapResponsePage.group.xml=Select Sample SOAP response message
-soapResponsePage.radio.defaultSchema=Use operation response schema defined in data source WSDL
-soapResponsePage.radio.externalSchema=Use external XML schema file:
-soapResponsePage.radio.endPoint=Query Web Services at SOAP end point:
-soapResponsePage.radio.externalXML=Use external sample data file
-soapResponsePage.button.browse=Browse...
-soapResponsePage.button.connect=Connect Now
+soapResponsePage.radio.defaultSchema=Use &operation response schema defined in data source WSDL
+soapResponsePage.radio.externalSchema=Use external XML &schema file:
+soapResponsePage.radio.endPoint=Query Web Services at SOAP &end point:
+soapResponsePage.radio.externalXML=Use external sample &data file
+soapResponsePage.button.browse=&Browse...
+soapResponsePage.button.connect=&Connect Now
 
 # XMLTableMappingPage
 
 # XMLColumnMappingPage
+
+# WSConsole
+wsConsole.message.error.cantRetrieveSOAPResponse=SOAP response can't be retrieved,please verify the end point
