Fix Bugzilla Bug 189383 189253

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -25,18 +25,24 @@ webServiceSelectionPage.group.endPoint=SOAP End Point
 webServiceSelectionPage.group.customClass=Custom Connection Class
 webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system
 webServiceSelectionPage.label.wsdlURI=&WSDL URL or Location:
-webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. This value is optional if a custom connection class is used
+webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL
 webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here
 webServiceSelectionPage.button.browse=&Browse...
 
 # OperationPage
 operationPage.message.default=Select an operation defined in the data source's WSDL descriptor
+operationPage.message.operationChanged=Operation has been changed, make sure to regenerate the SOAP request and reconnect the end point
 operationPage.label.selectOpearation=Selected Operation
 operationPage.label.document=Documentation
 
+# SoapParametersPage
+soapParametersPage.message.default=Enter the parameters of chosen WSDL operation
+
 # SoapRequestPage
 soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text
-soapRequestPage.button.generateTemplate=&Generate Template
+soapRequestPage.message.generateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
+soapRequestPage.title.generateTemplate=Regenerate Template
+soapRequestPage.button.generateTemplate=&Regenerate Template
 soapRequestPage.button.insertParameter=&Insert Parameter...
 soapRequestPage.button.clear=&Clear
 
