CheckIN:Fix bugzilla bug 189254

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -31,7 +31,8 @@ webServiceSelectionPage.button.browse=&Browse...
 
 # OperationPage
 operationPage.message.default=Select an operation defined in the data source's WSDL descriptor
-operationPage.message.operationChanged=Operation has been changed, make sure to regenerate the SOAP request and reconnect the end point
+operationPage.message.operationChanged=Confrim to regenerate the SOAP request and reconnect the End Point
+operationPage.title.operationChanged=Operation Changed
 operationPage.label.selectOpearation=Selected Operation
 operationPage.label.document=Documentation
 
@@ -40,9 +41,9 @@ soapParametersPage.message.default=Enter the parameters of chosen WSDL operation
 
 # SoapRequestPage
 soapRequestPage.message.default=Edit the SOAP request template of this data set. You may leave the text empty if your data source's custom connecion class code does not require a query text
-soapRequestPage.message.generateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
-soapRequestPage.title.generateTemplate=Regenerate Template
-soapRequestPage.button.generateTemplate=&Regenerate Template
+soapRequestPage.message.regenerateTemplate=This will regenerate the query text template based on the SOAP operation you have selected. It will remove any modifications you have made to the text.\n\nAre you sure?
+soapRequestPage.title.regenerateTemplate=Regenerate Template
+soapRequestPage.button.regenerateTemplate=&Regenerate Template
 soapRequestPage.button.insertParameter=&Insert Parameter...
 soapRequestPage.button.clear=&Clear
 
