[190333] TVT33:TCT517: ja:Mnemonic missing on Edit Data Source panel

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/messages.properties
@@ -49,6 +49,6 @@ stringSubUtil_SUBSTITUTION_VALUE_CANNOT_BE_NULL=The string substitution value ca
 stringSubUtil_TEXT_STRING_CANNOT_BE_NULL=The text string cannot be null.
 stringSubUtil_NAME_VALUE_MAP_CANNOT_BE_NULL=The name-value map cannot be null.
 #
-profileProperty_PROFILE_NAME=Connection Profile Name
-profileProperty_PROFILE_STORE_PATH=Connection Profile Store URL
+profileProperty_PROFILE_NAME=Connection &Profile Name
+profileProperty_PROFILE_STORE_PATH=Connection Profile Store &URL
 profileProperty_GROUP_PROPERTIES=External Connection Profile Reference
