190792 TVT33:TCT429: ar: Parenthesis incorrectly displayed

--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
@@ -5,6 +5,9 @@ plugin_internal_error=Editor core plugin internal error
 
 ProcIdentifierImpl_map_cant_be_null=Map cannot be null
 ProcIdentifierImpl_invalid_identifier_string=Invalid identifier string
+#\u200E invisible LEFT-TO-RIGHT MARK (LRM).
+ProcIdentifierImpl_trigger_long_display_string=\u200E({0}).{1}.{2}.{3}.{4}\u200E
+ProcIdentifierImpl_long_display_string=\u200E({0}).{1}.{2}.{3}\u200E
 
 DefaultDBFactory_vendor=Undefined
 
