*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/result/messages.properties
@@ -16,3 +16,5 @@ GroupSQLResultRunnable_title=Continue Execution
 GroupSQLResultRunnable_message=Error occurred when executing last statement(s). Do you want to continue?
 
 sqlEditorName=SQL Editor
+GroupSQLResultRunnable_fail_to_create_conn=Fail to create database connection
+GroupSQLResultRunnable_fail_to_create_conn_to=Fail to create connection to {0}
