Fix Bugzilla Bug 194357 [Accessibility]Shortcut key in New XML Data Source Profile dialog ia clash

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -89,6 +89,7 @@ columnName.typeName=Type
 
 dataset.new=New Data Set
 file.choose=&Browse...
+schema.choose=Brow&se...
 title.warning=Warning
 
 datasource.propertyPage.tooltip=XML Data Source
