enhance multi-file execution

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/src/org/eclipse/datatools/sqltools/internal/sqlscrapbook/connection/messages.properties
@@ -29,4 +29,6 @@ ConnectionInfoDialog_title_for_file=Select Profile for the Files
 ConnectionInfoDialog_file_conn_info=Select &files:
 SELECT_ALL_TITLE=&Select All
 DESELECT_ALL_TITLE=&Deselect All
+UP_TITLE=&Up
+DOWN_TITLE=D&own
 FileExecution_job_name=SQL Files Execution
