[BZ200131] Hiding SQL selection filter

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -172,6 +172,7 @@ _UI_DEFAULT_MSG_SELECT_ONLY = Select the folder:
 _UI_TITLE_FILTER = Specify Filter
 _UI_DESCRIPTION_FILTER = Specify a filter by selecting a predicate and entering a value or by indicating whether to include or exclude a selection of items.
 _UI_DESCRIPTION_SELECTION_ONLY = Specify a filter by indicating whether to include or exclude a selection of items.
+_UI_DESCRIPTION_EXPRESSION_ONLY = Specify a filter by selecting a predicate and entering a value.
 _UI_RADIO_BUTTON_EXPRESSION = &Expression
 _UI_LABEL_EXPRESSION = N&ame
 _UI_COMBO_STARTS_WITH = Starts with the characters
