[194538] More fail-safe checking to handle possible NPE in Multi-thread access of the ODA Consumer

--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/nls/messages.properties
@@ -18,7 +18,7 @@ helper_cannotGetParamMdBeforePrepare=Cannot get parameter metadata before statem
 helper_cannotSetSortSpecBeforePrepare=Cannot set the sort specification before the statement has been prepared.
 helper_maxConcurrentConnectionsReached=Maximum active concurrent connections reached.
 helper_connectionFailed=Unable to open connection.
-helper_cannotConstructConnectionFactory=Unable to create the ODA driver's connection factory.
+helper_cannotConstructConnectionFactory=Unable to load or instantiate the custom ODA driver class.
 helper_inadequatePermissionsForCompatibility=Cannot provide backwards compatibility due to inadequate permissions.
 helper_connectionIsInactive=The established connection to the data source is not active.
 helper_maxConcurrentStatementsReached=Maximum active concurrent statements reached for this connection.
