200509: Error message appear in the new debug configuration dialog 200648: Backslash escapes the following single quote in SQL high lighting. resouce bundle changes

--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/internal/core/messages.properties
@@ -11,9 +11,9 @@ ProcIdentifierImpl_long_display_string=\u200E({0}).{1}.{2}.{3}\u200E
 
 DefaultDBFactory_vendor=Undefined
 
-DefaultSQLSyntax_exception_splitSQL=Exception occurred while splitting sql: {0}
+DefaultSQLSyntax_exception_splitSQL=Exception occurred while splitting SQL: {0}
 
-ControlConnectionManager_unknownServerType=Can not determine the correct server type by the conection profile: {0}
+ControlConnectionManager_unknownServerType=Cannot determine the correct server type by the conection profile: {0}
 
 AbstractControlConnection_connection_already_being_debugged=Connection {0} is already being debugged
-AbstractControlConnection_invalid_store_procedure_description=Invalid store procedure description
+AbstractControlConnection_invalid_store_procedure_description=Invalid stored procedure description
