--- a/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/sql/util/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/src/org/eclipse/datatools/sqltools/sql/util/messages.properties
@@ -1,2 +1,2 @@
 
-error_cannot_get_connection_profile=Can not get connection profile information from the context
+error_cannot_get_connection_profile=Cannot get connection profile information from the context
