--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/launching/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/launching/messages.properties
@@ -12,6 +12,6 @@ SPLaunchConfigurationDelegate_UnsupportedServerType=Unsupported server type:
 SPLaunchConfigurationDelegate_notsupported=This mode is not supported yet!
 SPLaunchConfigurationDelegate_CreatingClientConn=Creating client connection
 SPLaunchConfigurationDelegate_AttachingConn=Attaching to connection
-SPLaunchConfigurationDelegate_NoPermission=Cannot debug. Maybe you do not have enough permission.
+SPLaunchConfigurationDelegate_NoPermission=Cannot debug. Make sure you have the appropriate permissions.
 SPLaunchConfigurationDelegate_CreatingDebugger=Creating debugger
 
