--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/actions/messages.properties
@@ -60,4 +60,4 @@ AddTemplateAction_label=Save as &Template...
 AddTemplateAction_tooltip=Save Selected Text as Template...
 
 BaseExecuteAction_job_title=SQL Statement Execution
-BaseExecuteAction_group_exec_title=Group execution
+BaseExecuteAction_group_exec_title=Group Execution
