--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/templates/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/templates/messages.properties
@@ -2,7 +2,7 @@
 TemplateProposal.displayString= {0} - {1}
 TemplateProposal.errorDialog.title=Template Evaluation Error
 
-SQLTemplateProposal_proposalInfo=After the user filled in the table/procedure name variable, this intelligent template will be expanded into the follow:<br>
+SQLTemplateProposal_proposalInfo=After you fill in the table/procedure name variable, this intelligent template will be expanded into:<br>
 
 ContributionTemplateStore_ignore_no_id= Ignoring template {0} since it has no id.
 ContributionTemplateStore_ignore_deleted= Ignoring template {0} since it is deleted.
