--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/utils/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/utils/messages.properties
@@ -1,2 +1,2 @@
-Cannot_disconnect_before_save=Cannot disconnect before saving the dirty editor
+Cannot_disconnect_before_save=Cannot disconnect without saving the editor changes
 Disconnect_error=Error
