--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/src/org/eclipse/datatools/sqltools/routineeditor/internal/messages.properties
@@ -3,19 +3,19 @@ plugin_internal_error=Internal error
 sqleditor_SQLEditor_saveToDBActionError=Failed saving to database the text: {0}
 sqleditor_SQLEditor_refreshError=Failed to do refresh action
 sqleditor_SQLEditor_pasteSQLError=Failed to do pasteSQL action for {0}
-sqleditor_SQLEditor_sqlFromPainter=SQL obtained from SQL Painter is : {0}
-sqleditor_SQLEditorInput_initError=Failed to initialize  the sql editor for the procedure {0}
+sqleditor_SQLEditor_sqlFromPainter=SQL obtained from Visual SQL is : {0}
+sqleditor_SQLEditorInput_initError=Failed to initialize  the SQL editor for the procedure {0}
 sqleditor_SQLEditor_pasteSQLvariablePair=Variable name-datatype pair filled into table : {0}
 sqleditor_SQLEditor_pasteSQLjdbcString=JDBC variable string :{0}
 sqleditor_SQLEditor_pasteSQLvarString=String containing all the variables : {0}
 sqleditor_SQLEditor_pasteSQLvariableIncorrectSyntax=Incorrect syntax in local variable declaration
 sqlEditor_SQLEditorContributor_bundleNull=Failed to initialize SQLEditorContributor, as the resource bundle could not be found
 sqlEditor_SQLEditorDocumentProvider_failGetSource=Failed to get source
-sqlEditor_SQLEditorDocumentProvider_saveDbFail=Save to db fail: {0}
+sqlEditor_SQLEditorDocumentProvider_saveDbFail=Failed to save to database: {0}
 sqlEditor_SQLEditorDocumentProvider_getTextFileBuffer=Failed to get file.
 
 
-RoutineAnnotationModel_resourcechanged=Error occurrs while updating the routine annotation model during resource changed event.
+RoutineAnnotationModel_resourcechanged=Error occurred while updating the routine annotation model during resource changed event.
 
 SQLEditor_error_save_title=Problems During Save
 SQLEditor_error_save_notsupport=Save failed. Make sure only the procedural object's body is modified and the syntax is correct.
