*** empty log message ***

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/core/tableviewer/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/src/org/eclipse/datatools/sqltools/common/core/tableviewer/messages.properties
@@ -1,7 +1,7 @@
 DataDeserializer_invalid_binary_data=Invalid binary data
 
 ParameterTableViewer_name=Name
-ParameterTableViewer_type=Data Type
+ParameterTableViewer_type=Datatype
 ParameterTableViewer_null=Null
 ParameterTableViewer_value=Value
 ParameterTableViewer_inout=In/Out
