CheckIn:Merge code in folder 1.5 to Plugins(HEAD)

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/src/org/eclipse/datatools/enablement/oda/ws/ui/i18n/messages.properties
@@ -22,11 +22,13 @@ webServiceSelectionPage.message.default=Web Services Data Source
 webServiceSelectionPage.message.error=Specify the SOAP End Point URL or Select a WSDL Descriptor
 webServiceSelectionPage.group.wsdl=WSDL Descriptor
 webServiceSelectionPage.group.endPoint=SOAP End Point
-webServiceSelectionPage.group.customClass=Custom Connection Class
+webServiceSelectionPage.group.customClass=Custom Driver Class
+webServiceSelectionPage.group.classPath=Driver Class Path
 webServiceSelectionPage.label.wsdl=If the WSDL descriptor of the Web Services is available, enter its URL or browse to its location in the local file system
 webServiceSelectionPage.label.wsdlURI=&WSDL URL or Location:
 webServiceSelectionPage.label.endPoint=Specify the SOAP &End Point URL. You may omit this value if the end point defined in the WSDL is to be used,\nor if you are using a custom connection class that does not require a end point URL
 webServiceSelectionPage.label.customClass=If connection and query to the Web Services is made through a custom &Java class, enter the fully qualified class name here
+webServiceSelectionPage.label.classPath=A semicolon(;)-separated list of additional JAR files and directories to search for the custom driver class
 webServiceSelectionPage.button.browse=&Browse...
 
 # OperationPage
@@ -68,4 +70,4 @@ soapResponsePage.button.connect=&Connect Now
 # XMLColumnMappingPage
 
 # WSConsole
-wsConsole.message.error.cantRetrieveSOAPResponse=SOAP response can't be retrieved,please verify the end point
+wsConsole.message.error.cantRetrieveSOAPResponse=SOAP response can't be retrieved, please verify the network or SOAP Response setting
