--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -281,7 +281,7 @@ _UI_LABEL_NEW_SELECT_INFO=&Type a SELECT statement. You can specify a virtual ta
 
 !preferences/SQLBuilderPreferencePage.java
 _UI_PREFERENCES_OMIT_SCHEMA_GROUP_TITLE=Omit current schema
-_UI_PREFERENCES_OMIT_SCHEMA_GROUP_DESC=Omit current schema settings are used when you first edit a SQL statement in the SQL Builder.
+_UI_PREFERENCES_OMIT_SCHEMA_GROUP_DESC=Omit current schema settings are used when you first edit a SQL statement in the SQL Query Builder.
 _UI_PREFERENCES_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
 _UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Use authorization ID as current schema
 _UI_PREFERENCES_OMIT_SCHEMA_SPECIFY_SCHEMA_IN_SQL=&Specify current schema in SQL format
@@ -291,6 +291,7 @@ _UI_PREFERENCES_OMIT_SCHEMA_CURRENT_SCHEMA=\t&Current schema:
 _UI_DIALOG_OMIT_SCHEMA_TITLE=Omit current schema
 _UI_DIALOG_OMIT_SCHEMA_GROUP_TITLE=Omit current schema settings
 _UI_DIALOG_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
+_UI_DIALOG_OMIT_SCHEMA_USE_AUID_USER_AS_CURRENT_SCHEMA=&Use authorization ID as current schema <{0}>
 _UI_DIALOG_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Use authorization ID as current schema
 _UI_DIALOG_OMIT_SCHEMA_SPECIFY_SCHEMA_IN_SQL=&Specify current schema in SQL format
 _UI_DIALOG_OMIT_SCHEMA_CURRENT_SCHEMA=\t&Current schema:
@@ -570,7 +571,7 @@ _ERROR_ALIAS_NOT_UNIQUE_TEXT         = Alias is not unique
 
 
 _EXC_OPEN_SQL_FILE_RESOURCE          = Error occurred opening input SQL file resource
-_EXC_OPEN_SQL_FILE_NOT_CONNECTED     = You must connect to the database "{0}" before opening the SQL file in the SQL Builder.
+_EXC_OPEN_SQL_FILE_NOT_CONNECTED     = You must connect to the database "{0}" before opening the SQL file in the SQL Query Builder.
 
 !! NOTE TO TRANSLATOR: Do not translate "ISQLBuilderEditorInput" in the following line
 _EXC_INPUT_NOT_ISQLBUILDEREDITORINPUT = Input is not an ISQLBuilderEditorInput
@@ -617,7 +618,7 @@ _UI_MENU_UNDO         = Undo
 datatools_sqlbuilder_sqleditor_tooltip = Open SQL Editor
 datatools_sqlbuilder_sqleditor_title = &SQL Editor
 
-! SQL Builder
+! SQL Query Builder
 datatools_sqlbuilder_sqlbuilder_DML_error = Error
 datatools_sqlbuilder_sqlbuilder_multipleDML = The SQL builder can be used only for creating a single \
 SQL DML statement. File {0} does not contain a single DML statement. Open file using SQL editor?
@@ -669,7 +670,7 @@ datatools_sqlbuilder_sqlstatement_actions_new = New...
 datatools_sqlbuilder_sqlstatement_actions_newSQLStatement = New SQL Statement...
 datatools_sqlbuilder_sqlstatement_actions_newSQLStatement_tooltip = Create a New Query Statement
 datatools_sqlbuilder_sqlstatement_actions_openwith = Open With
-datatools_sqlbuilder_sqlstatement_actions_sqlbuilder = SQL Builder
+datatools_sqlbuilder_sqlstatement_actions_sqlbuilder = SQL Query Builder
 datatools_sqlbuilder_sqlstatement_actions_sqleditor = SQL Editor
 
 !
@@ -735,7 +736,7 @@ ContentTip_tooltip     =Content Tip
 ContentTip_image       =
 ContentTip_description =Content Tip
 
-## Resources for other SQL Builder actions
+## Resources for other SQL Query Builder actions
 
 datatools_sqlbuilder_RunSQLAction_label       = &Run SQL
 datatools_sqlbuilder_RunSQLAction_tooltip     = Run the SQL statement
