BZ202585 Move "Omit Current Schema..." menu item from graphical view to Source View and Menu bar.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -281,7 +281,7 @@ _UI_LABEL_NEW_SELECT_INFO=&Type a SELECT statement. You can specify a virtual ta
 
 !preferences/SQLBuilderPreferencePage.java
 _UI_PREFERENCES_OMIT_SCHEMA_GROUP_TITLE=Omit current schema
-_UI_PREFERENCES_OMIT_SCHEMA_GROUP_DESC=Omit current schema settings are used when you first edit a SQL statement in the SQL Query Builder.
+_UI_PREFERENCES_OMIT_SCHEMA_GROUP_DESC=The omit current schema preferences are used when you first edit a SQL statement in the SQL Query Builder.
 _UI_PREFERENCES_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
 _UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Use authorization ID as current schema
 _UI_PREFERENCES_OMIT_SCHEMA_SPECIFY_SCHEMA_IN_SQL=&Specify current schema in SQL format
@@ -629,6 +629,8 @@ datatools_sqlbuilder_sqlbuilder_unsupport_VE = Visual Explain is not supported o
 _UI_CLEAR_TO_TEMPLATE 			     = Clear to Template
 _UI_REVERT_TO_LAST_CORRECT_SOURCE    = Revert to Last Correct Source
 _UI_LAST_CORRECT_SOURCE 			 = Last correct source?
+!Omit Current Schema
+_UI_OMIT_CURRENT_SCHEMA              = Omit Current Schema... 
 
 !
 ! views/execute/ExecuteViewer.java & views/execute/QueryOutputHelper.java
@@ -752,6 +754,11 @@ datatools_sqlbuilder_RevertToDefaultAction_label       = Clear to Template
 datatools_sqlbuilder_RevertToDefaultAction_tooltip     =
 datatools_sqlbuilder_RevertToDefaultAction_image       =
 datatools_sqlbuilder_RevertToDefaultAction_description =
+
+datatools_sqlbuilder_OmitCurrentSchemaAction_label       = Omit Current Schema...
+datatools_sqlbuilder_OmitCurrentSchemaAction_tooltip     =
+datatools_sqlbuilder_OmitCurrentSchemaAction_image       =
+datatools_sqlbuilder_OmitCurrentSchemaAction_description =
 
 !RDBTableDropListener
 _UI_INVALID_TABLE_ADDED = You cannot add tables from a database to a statement unless the database is associated with the project.
