BZ 202585. Improve UI for Omit Current Schema settings.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -280,21 +280,19 @@ _UI_LABEL_EXISTING_SELECT=C&reate or edit a SELECT statement:
 _UI_LABEL_NEW_SELECT_INFO=&Type a SELECT statement. You can specify a virtual table.
 
 !preferences/SQLBuilderPreferencePage.java
-_UI_PREFERENCES_OMIT_SCHEMA_GROUP_TITLE=Omit current schema
-_UI_PREFERENCES_OMIT_SCHEMA_GROUP_DESC=The omit current schema preferences are used when you first edit a SQL statement in the SQL Query Builder.
+_UI_PREFERENCES_OMIT_SCHEMA_DESC=Default values for the Omit Current Schema settings associated with SQL statements
 _UI_PREFERENCES_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
-_UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Use authorization ID as current schema
-_UI_PREFERENCES_OMIT_SCHEMA_SPECIFY_SCHEMA_IN_SQL=&Specify current schema in SQL format
-_UI_PREFERENCES_OMIT_SCHEMA_CURRENT_SCHEMA=\t&Current schema:
+_UI_PREFERENCES_OMIT_SCHEMA_SPECIFY_SCHEMA_GROUP_TITLE=Current schema
+_UI_PREFERENCES_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Authorization ID
+_UI_PREFERENCES_OMIT_SCHEMA_SCHEMA_NAME=&Schema name:
 
 !dialogs/OmitCurrentSchemaDialog
-_UI_DIALOG_OMIT_SCHEMA_TITLE=Omit current schema
-_UI_DIALOG_OMIT_SCHEMA_GROUP_TITLE=Omit current schema settings
+_UI_DIALOG_OMIT_SCHEMA_TITLE=Omit Current Schema
 _UI_DIALOG_OMIT_SCHEMA_IN_SQL=&Omit current schema in generated SQL statements
-_UI_DIALOG_OMIT_SCHEMA_USE_AUID_USER_AS_CURRENT_SCHEMA=&Use authorization ID as current schema <{0}>
-_UI_DIALOG_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Use authorization ID as current schema
-_UI_DIALOG_OMIT_SCHEMA_SPECIFY_SCHEMA_IN_SQL=&Specify current schema in SQL format
-_UI_DIALOG_OMIT_SCHEMA_CURRENT_SCHEMA=\t&Current schema:
+_UI_DIALOG_OMIT_SCHEMA_SPECIFY_SCHEMA_GROUP_TITLE=Current schema
+_UI_DIALOG_OMIT_SCHEMA_USE_AUID_USER_AS_CURRENT_SCHEMA=&Authorization ID <{0}>
+_UI_DIALOG_OMIT_SCHEMA_USE_AUID_AS_CURRENT_SCHEMA=&Authorization ID
+_UI_DIALOG_OMIT_SCHEMA_SCHEMA_NAME=&Schema name:
 
 !views/execute/ParameterWizards.java
 _UI_WIZARD_SPECIFY_VARIABLE_VALUES_TITLE=Specify Variable Values
