CheckIn:Fix bugzilla bug 206557 Cannot change connection profile when Flat File data source fails. on behalf of Xiaoxiao Wu

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -51,6 +51,7 @@ tooltip.typeline=Please make sure the existence of data type line\n in the secon
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
+error.invalidFlatFilePath=Invalid flat file data source path. Please correct the connection profile.
 error.errorExist=Error exists in the current page.  Would you like to save it anyway?
 error.noCSVFiles=The folder, "{0}", does not have any specified files in it.
 error.invalidFilePath=The file path is invalid.  Would you like to continue?
