--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -26,25 +26,30 @@ PropertiesLabelProvider.schema=Schema
 PropertiesLabelProvider.username=User Name
 PropertiesLabelProvider.password=Password
 
-CategoryDescriptor.msg.id_missing = A category extension for extension-point org.eclipse.datatools.connectivity.driverExtension does not provide a valid ID
-CategoryDescriptor.msg.name_missing = A category extension for extension-point org.eclipse.datatools.connectivity.driverExtension not provide a valid name
+CategoryDescriptor.msg.id_missing = A category extension for extension-point org.eclipse.datatools.connectivity.driverExtension does not provide a valid ID.
+CategoryDescriptor.msg.name_missing = A category extension for extension-point org.eclipse.datatools.connectivity.driverExtension not provide a valid name.
 CategoryDescriptor.msg.categoryDescriptorCreationError = Problem encountered while creating a category descriptor.
 
-TemplateDescriptor.msg.id_missing = An extension for extension-point org.eclipse.datatools.connectivity.driverExtension does not provide a valid ID
-TemplateDescriptor.msg.name_missing = An extension for extension-point org.eclipse.datatools.connectivity.driverExtension not provide a valid name
+TemplateDescriptor.msg.id_missing = An extension for extension-point org.eclipse.datatools.connectivity.driverExtension does not provide a valid ID.
+TemplateDescriptor.msg.name_missing = An extension for extension-point org.eclipse.datatools.connectivity.driverExtension not provide a valid name.
 TemplateDescriptor.msg.driverTypeDescriptorCreationError = Problem encountered while creating a driver template descriptor.
 
-DriverPreferences.label.availableDrivers = Available Driver Definitions
+DriverPreferences.label.availableDrivers = Driver de&finitions:
 DriverPreferences.button.addDriver = Add...
-DriverPreferences.button.editDriver = Edit...
-DriverPreferences.button.removeDriver = Remove
-DriverPreferences.button.copyDriver = Copy
-DriverPreferences.title.removeMessage = Are you sure?
+DriverPreferences.button.editDriver = &Edit...
+DriverPreferences.button.removeDriver = &Remove
+DriverPreferences.button.copyDriver = &Copy
+DriverPreferences.title.removeMessage = Confirm Driver Removal
 DriverPreferences.text.removeMessage = Are you sure you want to remove the driver {0} ?
 
 DriverDefinitionsDialog.title = Available Driver Definitions
 DriverDefinitionsDialog.message = Add, edit, or remove driver definitions to manage available driver definitions.
 DriverDefinitionsDialog.windowTitle = Driver Definitions
+DriverDefinitionsDialog.label.properties = &Driver definitions:
+DriverDefinitionsDialog.button.addDriver = &Add...
+DriverDefinitionsDialog.button.editDriver = &Edit...
+DriverDefinitionsDialog.button.removeDriver = &Remove
+DriverDefinitionsDialog.button.copyDriver = &Copy
 
 DelimitedStringList.button.add = Add
 DelimitedStringList.button.up = Up
@@ -54,16 +59,16 @@ DelimitedStringList.button.clear = Clear All
 
 DriverListCombo.button.browse = ...
 
-DriverValidator.msg.missing_required_property = Required property in driver definition missing value: {0}
-DriverValidator.msg.jarfile_not_found = Unable to locate jar/zip in file system as specified by the driver definition: {0}
-DriverInstance.error.invalidClassPath=Invalid driver class path
-DriverValidator.msg.empty_jar_list = Empty jar list in driver definition.
+DriverValidator.msg.missing_required_property = Required property in driver definition missing value: {0}.
+DriverValidator.msg.jarfile_not_found = Unable to locate JAR/zip in file system as specified by the driver definition: {0}.
+DriverInstance.error.invalidClassPath=Invalid driver class path.
+DriverValidator.msg.empty_jar_list = Driver files not specified in driver definition.
 
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
 DriverInstance.error.jarListNotDefined=Invalid driver definition; JAR list not defined.
 
 NewDriverDialog.label.availableTemplates = Available Driver Templates
-NewDriverDialog.label.driverNameText = Driver Name:
+NewDriverDialog.label.driverNameText = Driver name:
 NewDriverDialog.button.edit_immediately = Edit New Driver Definition Immediately
 NewDriverDialog.title = Specify a Driver Template and Definition Name
 NewDriverDialog.message = Select an available driver template and provide a name for the new driver definition.
@@ -72,14 +77,14 @@ NewDriverDialog.text.id_prefix = DriverDefn.
 NewDriverDialog.driverExistsWithName = A driver already exists with that name. Please provide a unique driver name.
 NewDriverDialog.driverNameNoSpaces = A driver name may not start or end with a space.
 
-EditDriverDialog.label.driverNameText = Driver Name
-EditDriverDialog.label.driverTypeText = Driver Type:
-EditDriverDialog.label.driverFileList = Driver File(s):
-EditDriverDialog.button.addJar = Add Jar/Zip
-EditDriverDialog.button.editJar = Edit Jar/Zip
-EditDriverDialog.button.removeJar = Remove Jar/Zip
-EditDriverDialog.button.clearAllJars = Clear All
-EditDriverDialog.label.properties = Properties:
+EditDriverDialog.label.driverNameText = Driver &name:
+EditDriverDialog.label.driverTypeText = Driver &type:
+EditDriverDialog.label.driverFileList = Driver &files:
+EditDriverDialog.button.addJar = &Add JAR/Zip...
+EditDriverDialog.button.editJar = &Edit JAR/Zip...
+EditDriverDialog.button.removeJar = &Remove JAR/Zip
+EditDriverDialog.button.clearAllJars = &Clear All
+EditDriverDialog.label.properties = &Properties:
 EditDriverDialog.column.name = Name
 EditDriverDialog.column.value = Value
 EditDriverDialog.properties.tooltip.default = List of available driver properties.
