[207849]  Various accessibility and cosmetic issues in connectivity dialogs,wizards

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/drivers/messages.properties
@@ -67,9 +67,9 @@ DriverValidator.msg.empty_jar_list = Driver files not specified in driver defini
 DriverValidator.msg.no_driver_selected = Define and select a driver from the drop-down list to continue.
 DriverInstance.error.jarListNotDefined=Invalid driver definition; JAR list not defined.
 
-NewDriverDialog.label.availableTemplates = Available Driver Templates
-NewDriverDialog.label.driverNameText = Driver name:
-NewDriverDialog.button.edit_immediately = Edit New Driver Definition Immediately
+NewDriverDialog.label.availableTemplates = &Available driver templates:
+NewDriverDialog.label.driverNameText = &Driver name:
+NewDriverDialog.button.edit_immediately = &Edit new driver definition immediately
 NewDriverDialog.title = Specify a Driver Template and Definition Name
 NewDriverDialog.message = Select an available driver template and provide a name for the new driver definition.
 NewDriverDialog.windowTitle = New Driver Definition
