DTP 1.6 ljulien BZ # 208786 - Support for background loading of the Database Catalog in the DSE

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/src/org/eclipse/datatools/connectivity/sqm/server/internal/ui/l10n/datatoolsServerUI.properties
@@ -15,6 +15,13 @@
 ##
 
 #
+## Loading support
+#
+DATATOOLS.SERVER.UI.EXPLORER.LOADING = Loading {0} provider
+DATATOOLS.SERVER.UI.EXPLORER.REMOVING_PLACE_HOLDER=Removing place holder ...
+DATATOOLS.SERVER.UI.EXPLORER.DESCRIPTION = Core
+
+#
 ## Actions
 #
 DATATOOLS.SERVER.UI.EXPLORER.CONNECT_SERVER = Add Server Connection
