DTP 1.6 ljulien BZ # 208799 - Add support for Index and Trigger helper methods

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/src/org/eclipse/datatools/connectivity/sqm/core/internal/ui/l10n/datatoolsCoreUI.properties
@@ -155,6 +155,16 @@ DATATOOLS.CORE.UI.PREFERENCES.OUTPUT.MAX_ROW_RETRIEVED = Maximum &rows to retrie
 DATATOOLS.CORE.UI.PREFERENCES.OUTPUT.MAX_LOB_LENGTH = &Maximum bytes to retrieve for character or binary column:
 DATATOOLS.CORE.UI.PREFERENCES.OUTPUT.ERROR_INVALID_INT = Specify a value between {0} and {1}.
 
+#
+## Index and Trigger Decorations
+#
+DATATOOLS.CORE.UI.INDEX_UNIQUE.DECORATION = UNIQUE
+DATATOOLS.CORE.UI.TRIGGER_UPDATE.DECORATION = UPDATE
+DATATOOLS.CORE.UI.TRIGGER_DELETE.DECORATION = DELETE
+DATATOOLS.CORE.UI.TRIGGER_INSERT.DECORATION = INSERT
+DATATOOLS.CORE.UI.TRIGGER_BEFORE.DECORATION = BEFORE
+DATATOOLS.CORE.UI.TRIGGER_AFTER.DECORATION = AFTER
+DATATOOLS.CORE.UI.TRIGGER_INSTEADOF.DECORATION = INSTEAD OF
 
 #
 ## Resource Chooser Dialog
