--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -51,6 +51,8 @@ tooltip.typeline=Please make sure the existence of data type line\n in the secon
 error.selectFolder=Please select a valid folder.
 error.selectColumns=Please select at least one column for this data set.
 error.emptyPath=Please enter a path.
+error.unexpectedError=An unexpected error happened.
+error.invalidConnectionFilePath=The specified connection profile source path, "{0}", does not exist.
 error.invalidFlatFilePath=Invalid flat file data source path. Please correct the connection profile.
 error.errorExist=Error exists in the current page.  Would you like to save it anyway?
 error.noCSVFiles=The folder, "{0}", does not have any specified files in it.
