CheckIn:Fix bugzilla bug 206707, 208949 on behalf of zhiwei zhu

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/src/org/eclipse/datatools/enablement/oda/xml/ui/i18n/messages.properties
@@ -73,9 +73,9 @@ error.columnMapping.sameColumnName=The column name [{0}] already exists. Please 
 error.invalidXpath=The XPath expression "{0}" is invalid.
 
 #data types for column mapping
-datatypes.dateTime=Timestamp
-datatypes.decimal=Big Decimal
-datatypes.float=Double
+datatypes.dateTime=Date Time
+datatypes.decimal=Decimal
+datatypes.float=Float
 datatypes.integer=Integer
 datatypes.string=String
 datatypes.date=Date
