CheckIn:Fix bugzilla bug 206707 on behalf of Zhiwei Zhu

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/src/org/eclipse/datatools/connectivity/oda/flatfile/ui/i18n/messages.properties
@@ -32,9 +32,9 @@ editor.title.originalName=Original Name
 editor.title.type=Type
 
 
-datatypes.dateTime=Timestamp
-datatypes.decimal=Big Decimal
-datatypes.float=Double
+datatypes.dateTime=Date Time
+datatypes.decimal=Decimal
+datatypes.float=Float
 datatypes.integer=Integer
 datatypes.string=String
 datatypes.date=Date
