--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/zseries/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/zseries/internal/ui/drivers/messages.properties
@@ -10,26 +10,25 @@
 ###############################################################################
 
 #
-## LUW Driver UI Contributor
+## zSeries Driver UI Contributor
 #
-CUI_NEWCW_DATABASE_LBL_UI_ = Databa&se:
+CUI_NEWCW_LOCATION_LBL_UI_ = Locat&ion:
 CUI_NEWCW_HOST_LBL_UI_ = &Host:
 CUI_NEWCW_PORT_LBL_UI_ = Port nu&mber:
 CUI_NEWCW_CONNECTIONURL_LBL_UI_= Connection UR&L:
-CUI_NEWCW_DEFDBNAME_VAL_UI_ = SAMPLE
-CUI_NEWCW_CLIENTAUTHENTICATION_BTN_UI_ = Use cl&ient authentication
+CUI_NEWCW_TBCREATOR_LBL_UI = &Retrieve objects created by this user only
 CUI_NEWCW_USERNAME_LBL_UI_ = User name:
 CUI_NEWCW_PASSWORD_LBL_UI_ = Password:
-CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Database
+CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Location
 CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
 CUI_NEWCW_PORT_SUMMARY_DATA_TEXT_ = Port number
-CUI_NEWCW_USE_CLIENT_AUTHENICATION_SUMMARY_DATA_TEXT_ = Use client authentication
+CUI_NEWCW_RETRIEVE_OBJECTS_RESTRICTION_SUMMARY_DATA_TEXT_ = Retrieve objects created by this user only
 CUI_NEWCW_USERNAME_SUMMARY_DATA_TEXT_ = User name
 CUI_NEWCW_URL_SUMMARY_DATA_TEXT_ = URL
 CUI_NEWCW_TRUE_SUMMARY_DATA_TEXT_ = true
 CUI_NEWCW_FALSE_SUMMARY_DATA_TEXT_ = false
 
-CUI_NEWCW_VALIDATE_DATABASE_REQ_UI_ = Enter a database name; for example, {0}.
+CUI_NEWCW_VALIDATE_DATABASE_REQ_UI_ = Enter a location name.
 CUI_NEWCW_VALIDATE_HOST_REQ_UI_= Enter the host name for the database server.
 CUI_NEWCW_VALIDATE_PORT_REQ_UI_ = Enter the connection port number for the database server.
 CUI_NEWCW_VALIDATE_USERID_REQ_UI_ = Enter a user name.
