[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.oracle.ui/src/org/eclipse/datatools/enablement/oracle/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.oracle.ui/src/org/eclipse/datatools/enablement/oracle/internal/ui/drivers/messages.properties
@@ -17,6 +17,7 @@ CUI_NEWCW_HOST_LBL_UI_ = &Host:
 CUI_NEWCW_PORT_LBL_UI_ = Port nu&mber:
 CUI_NEWCW_USERNAME_LBL_UI_ = User name:
 CUI_NEWCW_PASSWORD_LBL_UI_ = Password:
+CUI_NEWCW_SAVE_PASSWORD_LBL_UI_ = Sa&ve password
 CUI_NEWCW_CONNECTIONURL_LBL_UI_= Connection UR&L:
 ALL_CATALOGS_OPTION_UI_ = All
 DBA_CATALOG_OPTION_UI_ = DBA
@@ -28,6 +29,9 @@ CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
 CUI_NEWCW_PORT_SUMMARY_DATA_TEXT_ = Port number
 CUI_NEWCW_CATALOG_SUMMARY_DATA_TEXT_ = Catalog
 CUI_NEWCW_USERNAME_SUMMARY_DATA_TEXT_ = User name
+CUI_NEWCW_SAVE_PASSWORD_SUMMARY_DATA_TEXT_ = Save password
+CUI_NEWCW_TRUE_SUMMARY_DATA_TEXT_ = true
+CUI_NEWCW_FALSE_SUMMARY_DATA_TEXT_ = false
 CUI_NEWCW_URL_SUMMARY_DATA_TEXT_ = URL
 
 CUI_NEWCW_VALIDATE_DATABASE_REQ_UI_ = Enter an SID name.
