[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/zseries/internal/ui/drivers/messages.properties
+++ b/plugins/org.eclipse.datatools.enablement.ibm.db2.zseries.ui/src/org/eclipse/datatools/enablement/ibm/db2/zseries/internal/ui/drivers/messages.properties
@@ -19,11 +19,13 @@ CUI_NEWCW_CONNECTIONURL_LBL_UI_= Connection UR&L:
 CUI_NEWCW_TBCREATOR_LBL_UI = &Retrieve objects created by this user only
 CUI_NEWCW_USERNAME_LBL_UI_ = User name:
 CUI_NEWCW_PASSWORD_LBL_UI_ = Password:
+CUI_NEWCW_SAVE_PASSWORD_LBL_UI_ = Sa&ve password
 CUI_NEWCW_DATABASE_SUMMARY_DATA_TEXT_ = Location
 CUI_NEWCW_HOST_SUMMARY_DATA_TEXT_ = Host
 CUI_NEWCW_PORT_SUMMARY_DATA_TEXT_ = Port number
 CUI_NEWCW_RETRIEVE_OBJECTS_RESTRICTION_SUMMARY_DATA_TEXT_ = Retrieve objects created by this user only
 CUI_NEWCW_USERNAME_SUMMARY_DATA_TEXT_ = User name
+CUI_NEWCW_SAVE_PASSWORD_SUMMARY_DATA_TEXT_ = Save password
 CUI_NEWCW_URL_SUMMARY_DATA_TEXT_ = URL
 CUI_NEWCW_TRUE_SUMMARY_DATA_TEXT_ = true
 CUI_NEWCW_FALSE_SUMMARY_DATA_TEXT_ = false
