[212257] Added capability to create a New Connection Profile Store File from the ODA Profile Selection Page

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/nls/messages.properties
@@ -43,6 +43,7 @@ profilePage_pageLabel=Connection Profile
 profilePage_selectProfileDefaultMessage=Select the connection profile from which to create a data source
 profilePage_label_profileStore=Connection Profile &Store:
 profilePage_button_browse=&Browse...
+profilePage_button_new=&New...
 profilePage_odaTreeName=ODA Data Sources
 profilePage_checkboxLabel_useDefaultName=&Use the default data source name
 profilePage_label_dataSourceName=&Data Source Name:
@@ -51,3 +52,6 @@ profilePage_checkboxTooltip_maintainLink=Always use the Connection Profile Store
 profilePage_checkboxLabel_maintainLink=Use &externalized properties in Connection Profile Store
 profilePage_error_invalidName=Data source name is invalid.
 profilePage_error_invalidProfileStorePath=Invalid path for a connection profile store
+profileStoreCreationDialog_title=Create a Connection Profile Store
+profileStoreCreationDialog_grouptext=Select the connection profiles to be included in the store:
+profileStoreCreationDialog_newbutton_tooltiptext=Create a new connection profile
