BZ 202587 Componentization Implement a dialog to be invoked by the sqleditor.

--- a/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlbuilder/src/org/eclipse/datatools/sqltools/sqlbuilder/messages.properties
@@ -461,7 +461,7 @@ _UI_UPDATE                   = UPDATE
 _UI_DELETE                   = DELETE
 _UI_SELECT                   = SELECT
 
-_UI_PARSE_ERROR_ENCOUNTERED  = Parse error encounted.
+_UI_PARSE_ERROR_ENCOUNTERED  = Parse error encountered.
 
 
 !
@@ -581,6 +581,10 @@ _ERROR_ENTER_ALIAS                   = Table name is used. Enter an alias.
 _ERROR_DATABASE_NOT_AVAILABLE        = A database connection is not available
 _ERROR_INPUT_NOT_RECOGNIZED          = The editor input type is not supported
 _ERROR_OPEN_SQL_STORAGE_RESOURCE     = An error occurred opening the input SQL storage resource
+_ERROR_OPEN_SQL_STRING_RESOURCE      = An error occurred opening the input
+_ERROR_OPEN_INPUT_PARSE_FAILED       = The SQL cannot be parsed because it is either invalid or is not currently supported.
+_QUESTION_TITLE_OPEN_INPUT_PARSE_FAILED    = SQL Query Builder Parse Error
+_QUESTION_MESSAGE_OPEN_INPUT_PARSE_FAILED    = An empty SQL Statement will be created in the SQL Query Builder.
 
 !
 !model/SQLDomainModel.java
@@ -720,6 +724,12 @@ _UI_VIEWS_FULLSELECTELEMENT_VALUES = VALUES
 ! org.eclipse.datatools.sqltools.sqlbuilder.views.graph/GraphContextMenuProvider.java
 _UI_VIEWS_GRAPH_SELECT_ALL_COLUMN = Select All Columns
 _UI_VIEWS_GRAPH_DESELECT_ALL_COLUMN = Deselect All Columns
+
+!SQLQueryBuilder Dialog
+_UI_SQLQUERYBUILDERDIALOG_NAME = SQL Query Builder
+SQLQueryBuilderDialogParseFailOnOpenAskUserTitle=SQL Query Builder
+SQLQueryBuilderDialogParseFailOnOpenAskUserMessage=If you continue, an empty SQL Statement will be created in the SQL Query Builder. Do you wish to continue?
+
 
 # plugin.xml.  preference page extension point
 _UI_SQLQUERY_NAME = SQL Query
