[204620]  Need a method of contributing driver definition specific UIs to a connection profile wizard

--- a/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/messages.properties
+++ b/plugins/org.eclipse.datatools.connectivity.apache.derby.ui/src/org/eclipse/datatools/connectivity/apache/derby/internal/ui/connection/messages.properties
@@ -1,23 +1,1 @@
-NewDerbyEmbeddedConnectionProfileWizard.DerbyEmbeddedDatabaseWizardTitle=Derby Embedded Database
-
-DerbyEmbeddedDBProfileDetailsWizardPage.title = Specify a Driver and Connection Details
-DerbyEmbeddedDBProfileDetailsWizardPage.msg = Select a driver from the drop-down and provide login details for the connection.
-DerbyEmbeddedDBProfileDetailsWizardPage.0=Database location:
-DerbyEmbeddedDBProfileDetailsWizardPage.1=Browse...
-DerbyEmbeddedDBProfileDetailsWizardPage.2=Create database (if required)
-DerbyEmbeddedDBProfileDetailsWizardPage.3=Upgrade database to current version
-DerbyEmbeddedDBProfileDetailsWizardPage.driverCombo.label = Select a driver from the drop-down:
-DerbyEmbeddedDBProfileDetailsWizardPage.databaseName.label = Database:
-DerbyEmbeddedDBProfileDetailsWizardPage.url.label = URL:
-DerbyEmbeddedDBProfileDetailsWizardPage.PingButton=Test connection
-DerbyEmbeddedDBProfileDetailsWizardPage.userName.label = User name:
-DerbyEmbeddedDBProfileDetailsWizardPage.password.label = Password:
-DerbyEmbeddedDBProfileDetailsWizardPage.persistpassword.label = Save Password
-DerbyEmbeddedDBProfileDetailsWizardPage.optionalProps.label = Optional properties:
-DerbyEmbeddedDBProfileDetailsWizardPage.summary.driverName.label = Driver name
-DerbyEmbeddedDBProfileDetailsWizardPage.summary.connProps.label = Connection properties
-DerbyEmbeddedDBProfileDetailsWizardPage.summary.userName.label = User name
-DerbyEmbeddedDBProfileDetailsWizardPage.summary.password.label = Password
-DerbyEmbeddedDBProfileDetailsWizardPage.summary.url.label = URL
-DerbyEmbeddedDBProfileDetailsWizardPage.FileDialog.title.filebrowse = Browse for Database Folder
-DerbyEmbeddedDBProfileDetailsWizardPage.FileDialog.msg.filebrowse = Select the folder that corresponds to your Derby database.
+NewDerbyEmbeddedConnectionProfileWizard.DerbyEmbeddedDatabaseWizardTitle=New Derby Connection Profile
